# IMEvolve

./: CMakeLists.txt  compile.sh  exemplo.pbs  main.cpp  main_alberto.cpp  setModules
include/: .seletorNatural.h.swp  CMakeLists.txt  fitnessFunction.h  funcaoMutacao.h  funcaoObjetivo.h  funcaoReproducao.h  geracao.h  individuo.h  minha_geracao.h  seletorNatural.h
src/: fitnessFunction.cpp  funcaoMutacao.cpp  funcaoObjetivo.cpp  funcaoReproducao.cpp  geracao.cpp  individuo.cpp  main.cpp  minha_geracao.cpp  seletorNatural.cpp
